# d3neinternaldiv

./: .gitignore  .gitmodules  README.md
dataminimal/: corpid.csv  st-corp.csv  st-imp.csv  st-st.csv
src/: CMakeLists.txt  d3ne.cpp  d3ne.h  run.sh  train.cpp
tool/: make_tsne_fig.py
